# llm-from-scratch

SmoLlm2-vision/: .gitignore  pyproject.toml
SmoLlm2-vision/src/: config.py  main.py
SmoLlm2-vision/src/data/: data_module.py
SmoLlm2-vision/src/model/: __init__.py  projection.py  vlm.py
SmoLlm2-vision/src/trainer/: __init__.py  instruct_tuning.py  projection.py
